enum-ptr-tests/tests/fail/no_repr.stderr
error: EnumPtr requires `#[repr(C, usize)]`
 --> $DIR/no_repr.rs:6:6
  |
6 | enum Foo<'a, 'b> {
  |      ^^^
